# MCP-DEMO

./: .gitignore  README.md  browser_documentation.py  main.py  pyproject.toml  requirements.txt  requirements.yml
learning/: folder_server.py  postgres_server.py  web_search_using_tavily.py
learning/Clients/: README.md  multi_server_mcp_client.py  using_ollama.py
learning/Servers/: README.md  async_postgres_server.py  enhanced_folder_server.py  folder_server.py
learning/annotations/: type_dict_ex.py
learning/asyncoronus python/: TaskGroup_usage.py  async_1.py  await_1.py  couroutine_seprately.py  create_task.py  gather_task.py
learning/groq/: README.md  client.py  server.py  simple_async_groq_client.py  simple_groq_client.py  simple_sse_client.py  tool_usage_example.py
learning/langgraph/: README.md  agent.py  async_my_react_agent.py  my_react_agent.py  using_memory.py  using_state.py
learning/langgraph/react-template/: pyproject.toml
learning/langgraph/react-template/src/react_agent/: configuration.py
learning/ollama/: README.md  chat_loop.py  first.py  langchain_2.py  langchain_ollama_chat.py  tools.py
learning/openai_video_generation/: usage.py
learning/simple/: README.md  client_sse.py  client_stdio.py  server_sse.py  server_stdio.py
templates/: base.html  env.html  error.html  file_view.html  index.html  module.html
