[project]
name = "mcp-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "async>=0.6.2",
    "asyncpg>=0.30.0",
    "flask>=3.1.0",
    "flask-socketio>=5.5.1",
    "groq>=0.23.0",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "langchain>=0.3.24",
    "langchain-community>=0.3.23",
    "langchain-google-genai>=2.1.3",
    "langchain-groq>=0.3.2",
    "langchain-ollama>=0.3.2",
    "langgraph>=0.3.31",
    "langgraph-cli[inmem]>=0.2.7",
    "markdown>=3.8",
    "mcp[cli]>=1.6.0",
    "nest-asyncio>=1.6.0",
    "ollama>=0.4.8",
    "openai>=1.75.0",
    "prompt-toolkit>=3.0.51",
    "pydantic>=2.11.4",
    "pytest>=8.3.5",
    "python-dotenv>=1.1.0",
    "strands-agents-tools>=0.2.12",
    "strands-agents[openai]>=1.13.0",
    "tavily-python>=0.5.4",
]
